--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = "The Neuro Divergent's Manual to Life"
+theme = 'archie'
